<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_level"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_overlay"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context="com.tayon.xvso.ChooseActivity">

    <TextView
        android:id="@+id/txtChoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_a_choice"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="#ffff4444"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39999998" />

    <Button
        android:id="@+id/btnX"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_x"
        android:text="@string/x"
        android:textColor="@color/black_overlay"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/btnO"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChoose" />

    <Button
        android:id="@+id/btnO"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_o"
        android:text="@string/o"
        android:textColor="@color/black_overlay"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnX"
        app:layout_constraintTop_toBottomOf="@+id/txtChoose" />

    <TextView
        android:id="@+id/txtNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_x_always_goes_first"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="#ffff4444"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>